<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.invoices.add_invoice.invoice_edit_fragments.EditBusinessDetailsFromInvoiceActivity">

    <include
        android:id="@+id/customToolbar"
        layout="@layout/view_custom_toolbar" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgImagePicker"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/spacing_30"
                android:src="@drawable/add_business_icon"
                android:contentDescription="@string/cd_choose_business_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/firstCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_30"
                android:layout_marginTop="@dimen/spacing_30"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgImagePicker">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/editBusinessName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacing_16"
                        android:layout_marginTop="@dimen/spacing_26"
                        android:background="@null"
                        android:hint="Business Name"
                        android:textSize="@dimen/text_size_18"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editBusinessOwnerName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_26"
                        android:background="@null"
                        android:hint="Business Owner Name"
                        android:textSize="@dimen/text_size_18"
                        app:layout_constraintEnd_toEndOf="@id/editBusinessName"
                        app:layout_constraintStart_toStartOf="@id/editBusinessName"
                        app:layout_constraintTop_toBottomOf="@id/editBusinessName" />

                    <EditText
                        android:id="@+id/editBusinessNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_26"
                        android:layout_marginBottom="@dimen/spacing_26"
                        android:background="@null"
                        android:hint="Business Number"
                        android:textSize="@dimen/text_size_18"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/editBusinessOwnerName"
                        app:layout_constraintStart_toStartOf="@id/editBusinessOwnerName"
                        app:layout_constraintTop_toBottomOf="@id/editBusinessOwnerName" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/secondCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_30"
                android:layout_marginTop="@dimen/spacing_30"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstCard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/editAddress1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacing_16"
                        android:layout_marginTop="@dimen/spacing_26"
                        android:background="@null"
                        android:hint="Address Line 1"
                        android:textSize="@dimen/text_size_18"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editAddress2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacing_16"
                        android:layout_marginTop="@dimen/spacing_26"
                        android:background="@null"
                        android:hint="Address Line 2"
                        android:textSize="@dimen/text_size_18"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/editAddress1" />

                    <EditText
                        android:id="@+id/editAddress3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacing_16"
                        android:layout_marginTop="@dimen/spacing_26"
                        android:layout_marginBottom="@dimen/spacing_26"
                        android:background="@null"
                        android:hint="Address Line 3"
                        android:textSize="@dimen/text_size_18"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/editAddress2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/thirdCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_30"
                android:layout_marginTop="@dimen/spacing_30"
                android:layout_marginBottom="@dimen/spacing_8"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/secondCard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacing_16"
                        android:layout_marginTop="@dimen/spacing_26"
                        android:background="@null"
                        android:hint="Email"
                        android:textSize="@dimen/text_size_18"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editPhoneNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacing_16"
                        android:layout_marginTop="@dimen/spacing_26"
                        android:background="@null"
                        android:hint="Phone"
                        android:inputType="phone"
                        android:textSize="@dimen/text_size_18"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/editEmail" />

                    <EditText
                        android:id="@+id/editMobileNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacing_16"
                        android:layout_marginTop="@dimen/spacing_26"
                        android:background="@null"
                        android:hint="Mobile"
                        android:inputType="phone"
                        android:textSize="@dimen/text_size_18"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/editPhoneNumber" />

                    <EditText
                        android:id="@+id/editWebsite"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacing_16"
                        android:layout_marginTop="@dimen/spacing_26"
                        android:layout_marginBottom="@dimen/spacing_26"
                        android:background="@null"
                        android:hint="Website"
                        android:textSize="@dimen/text_size_18"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/editMobileNumber" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
